--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 						</header>
 						<footer>
 							<ul class="icons">
+								<li><a href="mailto:salahalsasa@gmail.com" class="fa-envelope-o">Email</a></li>
 								<li><a href="https://www.linkedin.com/in/salahaldinalsasa" class="fa-linkedin">LinkedIn</a></li>
 								<li><a href="https://www.github.com/sd189" class="fa-github">Github</a></li>
 							</ul>
