--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="mailto:salahalsasa@gmail.com" class="fa-envelope-o">Email</a></li>
-								<li><a href="https://www.linkedin.com/in/salahaldinalsasa" class="fa-linkedin">LinkedIn</a></li>
-								<li><a href="https://www.github.com/sd189" class="fa-github">Github</a></li>
+								<li><a href="https://www.linkedin.com/in/salahaldinalsasa" class="fa-linkedin-square">LinkedIn</a></li>
+								<li><a href="https://www.github.com/sd189" class="fa-github-alt">Github</a></li>
 							</ul>
 						</footer>
 					</section>
